--- a/.github/workflows/gcp-cloud-function-unit-test.yaml
+++ b/.github/workflows/gcp-cloud-function-unit-test.yaml
@@ -5,10 +5,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        working-directory: ./function-code
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - run: cd function-code
+        working-directory: ./function-code
       - run: npm install
+        working-directory: ./function-code
       - run: npm test
+        working-directory: ./function-code
       - run: npm run lint
+        working-directory: ./function-code
